update to fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 body {
 	font-family: "Saira Condensed", sans-serif;
+	overflow-x: hidden;
 }
 
 header {
